lab1/Test/L1-A-0-31.output
Error Type A at Line 13
Error Type A at Line 22
