lab1/Test/L1-A-0-31.cmm
float MlHNB [ 1310636527 ] [ 1139955152 ] [ 1243439405 
  ] [ 111244961 ] [ 1573775188 ] [ 41003773 ] [ 223920278 
  ] 
;
float bQt6q ( ) {
  if ( - - ( - uo3He8y8O0aS = X4irB ) . Mh14QDcgwLrihxP 
    >= ! ! OYS5Z * znXJg / QnONVetz9mgvbJMk - F5V9hJ3 
    + W5Ux1Dti3tB - uhMJB - zKMk3boZ4Fh + xlcwhgEogC8W8rD 
    != - 877671100.1883271621 [ KSedBKtvtC ] / nh - Bz2NjSrL 
    + w4YPTKMcKSUGq3UkW != vn417wGVyyW1PCn [ lFxIFYX6wai 
    ] / qdFq <= ! - yaCFpuSU / tDyN5ZETEpG9Do <= ! vZVshr3pHk 
    ( ) / h1_QW_I + mb2tlTVLvHOipsVKBtl3 + xNwjKMF0oJuExo6a 
    + njBxm0CzMZd :+ eysPeGr_4DO || - - U < VWAn_WhuF2CdC 
    < ySZjO5vx <= YscmLgw6FWWjJLQlwrBC >= XhxLngZH8ho 
    )   awAA1P / xa517ePwVvfWpu2vTXST * TcXIJX05dwo < 
    QPC9l_BRRUc6p >= CkYtO2jJavxtGvE > gtEHxEI3vwq < BD 
    >= FEe07ko_t < b4_tCDZe9bG1_znX8 > gUEfy2l8 != KaKQGNJpE3Z2w9ME6 
    != KPAhKsW <= _zEnVi7KAD == VgWz72RXGjOYVIf5T < sX0sF 
    >= D < sL4sllZC || ht ;
else   DYHlFOTk9 ;

}&
